# kiso-parser-c

./: .gitignore  README.md  clang-modifications.patch  download_clang.sh  pyproject.toml
c_parser_api/: __init__.py  build_tracer.sh  c_parser.py  tracer.c
include_finder/: CMakeLists.txt  include_finder.cpp
kiso_parser_c.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
usage_analyzer/: CMakeLists.txt  build.sh  usage_info.cpp
usage_macro_ref_analyzer/: CMakeLists.txt  ref_analyzer.cpp
